syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "GetMdibResponseProto";

import "sdc/biceps/abstractgetresponse.proto";
import "sdc/biceps/mdib.proto";

  message GetMdibResponseMsg {
    AbstractGetResponseMsg abstract_get_response = 1;
    MdibMsg mdib = 2;
  }
