syntax = "proto3";

package sdc;

import "google/protobuf/any.proto";

import "sdc/sdc_messages.proto";

option java_package = "org.somda.sdc.proto.model";
option java_outer_classname = "Sdc";

service GetService {
  rpc GetMdib(GetMdibRequest) returns (GetMdibResponse);
  rpc GetMdDescription(GetMdDescriptionRequest) returns (GetMdDescriptionResponse);
  rpc GetMdState(GetMdStateRequest) returns (GetMdStateResponse);
  rpc GetContextStates(GetContextStatesRequest) returns (GetContextStatesResponse);
}

service MdibReportingService {
  rpc EpisodicReport(EpisodicReportRequest) returns (stream EpisodicReportStream);
  rpc PeriodicReport(PeriodicReportRequest) returns (stream PeriodicReportStream);
}

service SetService {
  rpc Activate(ActivateRequest) returns (ActivateResponse);
  rpc SetMetricState(ActivateRequest) returns (ActivateResponse);
  rpc SetComponentState(SetComponentStateRequest) returns (SetComponentStateResponse);
  rpc SetContextState(SetContextStateRequest) returns (SetContextStateResponse);
  rpc SetAlertState(SetAlertStateRequest) returns (SetAlertStateResponse);
  rpc SetString(SetStringRequest) returns (SetStringResponse);
  rpc SetValue(SetValueRequest) returns (SetValueResponse);
  rpc OperationInvokedReport(OperationInvokedReportRequest) returns (stream OperationInvokedReportStream);
}

service LocalizationService {
  rpc GetSupportedLanguages(GetSupportedLanguagesRequest) returns (GetSupportedLanguagesResponse);
  rpc GetLocalizedText(GetLocalizedTextRequest) returns (GetLocalizedTextStream);
}

service ArchiveService {
  rpc GetDescriptorsFromArchive(GetDescriptorsFromArchiveRequest) returns (GetDescriptorsFromArchiveStream);
  rpc GetStatesFromArchive(GetStatesFromArchiveRequest) returns (GetStatesFromArchiveStream);
}
